# sideswapclient

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  analysis_options.yaml  application_icon.yaml  build.yaml  notification_icon.yaml  pubspec.yaml  pubspec_fdroid.yaml  pubspec_main.yaml  resources.qrc
rust/: Cargo.toml
rust/.cargo/: config
rust/depix_convert/: Cargo.toml
rust/depix_convert/config/: example.toml
rust/depix_convert/src/: main.rs
rust/docs/: dealer.md
rust/gdk_rust/: Cargo.toml
rust/gdk_rust/gdk_common/: Cargo.toml  build.rs
rust/gdk_rust/gdk_electrum/: Cargo.toml
rust/gdk_rust/gdk_rust/: Cargo.toml
rust/sideswap_amp/: Cargo.toml
rust/sideswap_amp/src/: lib.rs  models.rs  tests.rs  tx_cache.rs
rust/sideswap_amp_dealer/: Cargo.toml  README.md
rust/sideswap_amp_dealer/config/: prod.toml
rust/sideswap_amp_dealer/src/: main.rs
rust/sideswap_api/: Cargo.toml
rust/sideswap_api/src/: fcm_models.rs  gdk.rs  http_rpc.rs  lib.rs  market.rs  mkt.rs  pegx.rs
rust/sideswap_client/: Cargo.toml  build.rs
rust/sideswap_client/data/: assets-testnet.json  assets.json  update_assets.sh
rust/sideswap_client/scripts/: gen_gdk_bindings.sh
rust/sideswap_client/src/: amp.rs  db.rs  envs.rs  ffi.rs  gdk.rs  gdk_cpp.rs  gdk_jade.rs  gdk_json.rs  gdk_rust.rs  gdk_ses.rs  gdk_ses_impl.rs  gdk_ses_jade.rs  gdk_ses_stub.rs  hist.rs  jade_mng.rs  lib.rs  models.rs  pin.rs  rpc.rs  schema.rs  settings.rs  swaps.rs  tests.rs  ui.rs  worker.rs  ws.rs
rust/sideswap_common/: Cargo.toml
rust/sideswap_common/data/: log_default.toml
rust/sideswap_common/src/: b64.rs  channel_helpers.rs  cipher.rs  coin_select.rs  const_asset_id.rs  dealer_ticker.rs  env.rs  error_utils.rs  event_proofs.rs  exchange_pair.rs  file_cache.rs  gdk_registry_cache.rs  green_backend.rs  http_client.rs  lib.rs  log4rs_config.rs  log_init.rs  network.rs  network_fee.rs  network_fee_discount.rs  panic_handler.rs  pin.rs  price_stream.rs  pset.rs  pset_blind.rs  random_id.rs  recipient.rs  registration.rs  retry_delay.rs  rpc.rs  send_tx.rs  target_os.rs  test_utils.rs  tx_type.rs  types.rs  web_notif.rs  ws.rs
rust/sideswap_dealer/: Cargo.toml  build.rs
rust/sideswap_dealer/config/: log_config.toml
rust/sideswap_dealer/src/: dealer.rs  dealer_rpc.rs  lib.rs  logs.rs  market.rs  price_stream.rs  rpc.rs  signals.rs  types.rs  utxo_data.rs
rust/sideswap_dealer_amp/: Cargo.toml  README.md
rust/sideswap_dealer_amp/config/: example.toml
rust/sideswap_dealer_amp/src/: main.rs
rust/sideswap_dealer_bitfinex/: Cargo.toml  build.rs
rust/sideswap_dealer_bitfinex/config/: dealer_logs_prod.yml  dealer_logs_regtest.yml  dealer_logs_testnet.yml  dealer_prod_example.toml  dealer_regtest_example.toml  dealer_testnet_example.toml  example.toml
rust/sideswap_dealer_bitfinex/src/: balancing.rs  bfx_ws_api.rs  bitfinex_api.rs  bitfinex_worker.rs  cli.rs  external_prices.rs  main.rs  module.rs  slack.rs  storage.rs
rust/sideswap_dealer_elements/: Cargo.toml  README.md
rust/sideswap_dealer_elements/config/: example.toml  testnet.toml
rust/sideswap_dealer_elements/src/: binance.rs  bit_preco.rs  main.rs
rust/sideswap_dealer_example/: Cargo.toml  README.md
rust/sideswap_dealer_example/config/: dealer_example_config.toml  dealer_example_logs.yml
rust/sideswap_dealer_example/src/: btc_zmq.rs  dealer.rs  main.rs  prices.rs  rpc.rs
rust/sideswap_dealer_lwk/: Cargo.toml
rust/sideswap_dealer_lwk/config/: example.toml
rust/sideswap_dealer_lwk/src/: main.rs  wallet.rs
rust/sideswap_dealer_stdio/: Cargo.toml
rust/sideswap_dealer_stdio/config/: dealer_stdio_config.toml  dealer_stdio_logs.yml
rust/sideswap_dealer_stdio/node/: main.js
rust/sideswap_dealer_stdio/python/: main.py
rust/sideswap_dealer_stdio/src/: main.rs
rust/sideswap_dealer_ws/: Cargo.toml
rust/sideswap_dealer_ws/config/: dealer_ws_config.toml  dealer_ws_logs.yml
rust/sideswap_dealer_ws/node/: main.js  package-lock.json  package.json
rust/sideswap_dealer_ws/python/: main.py
rust/sideswap_dealer_ws/src/: main.rs
rust/sideswap_headless/: Cargo.toml
rust/sideswap_headless/src/: main.rs
rust/sideswap_headless_server/: Cargo.toml  README.md
rust/sideswap_headless_server/config/: prod.toml  testnet.toml
rust/sideswap_headless_server/src/: api_server.rs  db.rs  error.rs  main.rs  wallet.rs  worker.rs
rust/sideswap_headless_trader/: Cargo.toml  README.md
rust/sideswap_headless_trader/config/: prod.toml
rust/sideswap_headless_trader/src/: api_server.rs  main.rs
rust/sideswap_headless_trader/tools/: Dockerfile  build.sh
rust/sideswap_headless_wallet/: Cargo.toml
rust/sideswap_headless_wallet/src/: headless_wallet_api.rs  main.rs
rust/sideswap_jade/: Cargo.toml
rust/sideswap_jade/src/: byte_array.rs  http_request.rs  jade_mng.rs  lib.rs  models.rs  reader.rs  serial.rs  transports.rs
rust/sideswap_libwally/: Cargo.toml
rust/sideswap_libwally/src/: lib.rs
rust/sideswap_lwk/: Cargo.toml
rust/sideswap_lwk/src/: lib.rs
rust/sideswap_manager/: .env  Cargo.toml
rust/sideswap_manager/.sqlx/: query-37967ed094cae3e8ac1c2db1a3db3e307a3402e3e88dad88d83def34f7213609.json  query-638dfac09141b70459ca4ec1ac0402af0dc8bfc9fd70f1f4cf0cf64f7a88f3c8.json  query-8062d49c2224cc60e9cb03f0f493a7c3fa308476b0d914219b24879aeb1dc87e.json  query-afc1413e08b269a2ffd47c5f666acca8c6d658e20c118684956b18ff56d99a32.json  query-cfaa3bf0773cc85fd2b0ee291366ee23ef265c4ab8f6f60dafb4a1e980183a0d.json  query-f4bdee8a10885f3e4830642809ea5fe991280caef855817c07e808d93004b97a.json
rust/sideswap_manager/config/: example.toml
rust/sideswap_manager/migrations/: 1_init.sql
rust/sideswap_manager/src/: api.rs  controller.rs  db.rs  error.rs  main.rs  models.rs  worker.rs  ws_server.rs
rust/sideswap_monitoring/: Cargo.toml
rust/sideswap_monitoring/config/: dealer_monitoring_config.toml  dealer_monitoring_logs.yml
rust/sideswap_monitoring/src/: main.rs
rust/sideswap_payjoin/: Cargo.toml
rust/sideswap_payjoin/src/: lib.rs  network_fee.rs  (+2 more)
rust/sideswap_types/: Cargo.toml
rust/stableapp_api/: Cargo.toml
(+1561 files in other folders)
