[workspace]
resolver = "2"

members = [
    "sideswap_api",
    "sideswap_client",
    "sideswap_common",
    "sideswap_dealer",
    "sideswap_dealer_bitfinex",
    "sideswap_dealer_example",
    "sideswap_dealer_ws",
    "sideswap_headless",
    "sideswap_headless_server",
    "sideswap_headless_trader",
    "sideswap_headless_wallet",
    "sideswap_jade",
    "sideswap_payjoin",
    "sideswap_types",
]

[workspace.dependencies]
allo-isolate = "0.1"
anyhow = "1.0"
base64 = "0.21"
bip39 = "1.0"
bitcoin = "0.30"
block-modes = "0.8.0"
bytes = "1.5"
chrono = "0.4"
ciborium = "0.2"
ciborium-io = "0.2"
clap = "3.2"
config = "0.11"
crossbeam-channel = "0.5"
derive_more = "0.99"
elements = "0.22"
flexi_logger = "0.27"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
git2 = { version = "0.18", default-features = false }
hex = "0.4"
hyper = "0.14"
libc = "0.2"
log = "0.4"
log4rs = "1.2"
once_cell = "1.18"
prost = "0.11"
prost-build = "0.10"
rand = "0.8"
reqwest = { version = "0.11", default-features = false }
secp256k1 = "0.27"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde_with = "1.10"
serialport = "4.2"
signal-hook = "0.3"
thiserror = "1.0"
time = "0.3"
tokio = "1.15"
tokio-socks = "0.5"
tokio-tungstenite = "0.20"
tungstenite = { version = "0.20", default-features = false }
ureq = "2.7"
url = "2.3"
vergen = { version = "5.1", default-features = false }

# Please also update deps in sideswap_payjoin (which does not use workspace versions)
