[workspace]
resolver = "2"

members = [
    "sideswap_amp",
    "sideswap_api",
    "sideswap_client",
    "sideswap_common",
    "sideswap_dealer",
    "sideswap_dealer_bitfinex",
    "sideswap_dealer_example",
    "sideswap_dealer_stdio",
    "sideswap_headless",
    "sideswap_headless_server",
    "sideswap_headless_trader",
    "sideswap_headless_wallet",
    "sideswap_jade",
    "sideswap_monitoring",
    "sideswap_payjoin",
    "sideswap_types",
]

[workspace.dependencies]
allo-isolate = "0.1"
anyhow = "1.0"
axum = { version = "0.7", default_features = false, features = ["form", "http1", "json", "matched-path", "query", "tokio"] }
base64 = "0.21"
bip39 = "2.0.0"
bitcoin = { version = "0.31", features = [ "serde" ] }
bitcoin_hashes = "0.14.0"
block-modes = "0.8.0"
btleplug = { version = "0.11.5" }
bytes = "1.5"
chrono = "0.4"
ciborium = "0.2"
ciborium-io = "0.2"
clap = "3.2"
config = "0.11"
crossbeam-channel = "0.5"
derive_more = "0.99"
elements = { version = "0.24.1", features = ["serde"] }
elements-miniscript = "0.3.0"
flexi_logger = "0.27"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
git2 = { version = "0.18", default-features = false }
hex = "0.4"
libc = "0.2"
log = "0.4"
log4rs = { version = "1.2", features = ["gzip"] }
once_cell = "1.18"
prost = "0.12"
prost-build = "0.12"
rand = "0.8"
ring = { version = "0.17.7" }
rusqlite = { version = "0.30.0", features = ["bundled"] }
secp256k1 = { version = "0.28", features = ["global-context", "rand"] }
secp256k1-zkp = { version = "0.10.0", features = ["global-context"] }
semver = { version = "1.0.22" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_with = "1.10"
serialport = "4.2"
signal-hook = "0.3"
thiserror = "1.0"
time = { version = "0.3", features = ["local-offset", "formatting", "macros", "parsing"] }
tokio = { version = "1.15", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-socks = "0.5"
tokio-tungstenite = { version = "0.20", features = ["stream", "rustls-tls-webpki-roots"] }
tungstenite = { version = "0.20", default-features = false }
ureq = { version = "2.9", features = ["json", "socks-proxy"] }
url = "2.3"
uuid = { version = "1.8.0" }
vergen = { version = "5.1", default-features = false, features = ["build", "rustc", "git"] }
wamp_async = "0.3.1"

# Please also update deps in sideswap_payjoin (which does not use workspace versions)
