[package]
name = "gdk-rust"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>", "Nadav Ivgi <nadav@shesek.info>"]
license = "(MIT)"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
android_log = ["android_logger"]

[dependencies]
rand = "0.7.3"
gdk-electrum = { path = "gdk_electrum", features = ["android_log"] }
gdk-common = { path = "gdk_common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
hex = "0.4.0"
log = "0.4.8"
android_logger = { version = "0.8.6", optional = true }
url = "1.7.2"
ureq = { version = "1.5.5", features = ["json", "socks-proxy"] }
# We need to pin half (transitive dep from serde_cbor) to stay compatible with Rust 1.49.0
half = "~1.7"

