[package]
name = "sideswap_amp"
version = "0.1.2"
edition = "2021"

[lib]
name = "sideswap_amp"

[dependencies]
sideswap_common = { path = "../sideswap_common" }

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bip39.workspace = true
bitcoin_hashes.workspace = true
bitcoin.workspace = true
bytes.workspace = true
elements-miniscript.workspace = true
elements.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
rand.workspace = true
rmp-serde.workspace = true
secp256k1-zkp.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
url.workspace = true
