[package]
name = "sideswap_api"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_types = { path = "../sideswap_types" }

elements = { workspace = true, features = ["serde"] }
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = [] }
serde_json = { workspace = true }
rand = { workspace = true }