[package]
name = "sideswap_client"
version = "0.1.2"
edition = "2018"
build = "build.rs"

[lib]
name = "sideswap_client"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
sideswap_api = { version = "*", path = "../sideswap_api" }
sideswap_common = { version = "*", path = "../sideswap_common" }
sideswap_jade = { version = "*", path = "../sideswap_jade" }
elements = { git = "https://github.com/ElementsProject/rust-elements", rev = "0edddf730ff8fd441d3af28bc600b8bc8a8df5a9", features = ["serde-feature"] }
bitcoin = { version = "0.27.1", features = [ "use-serde" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "*"
log = "*"
anyhow = "*"
flexi_logger = "0.22.0"
derive_more = "*"
base64 = "*"
gdk-electrum = { path = "../gdk_rust/gdk_electrum" }
gdk-common = { path = "../gdk_rust/gdk_common" }
gdk-registry = { path = "../gdk_rust/gdk_registry" }
gdk-rust = { path = "../gdk_rust/gdk_rust" }
libc = "*"
prost = "0.10.4"
bytes = "*"
allo-isolate = "*"
chrono = "*"
hex = "*"
rand = "0.6.5"
bip39 = "1.0.1"
ureq = { version = "2.4.0", features = ["json"] }
time = {version= "=0.3.5", features = ["local-offset", "formatting", "macros", "parsing"]}
crossbeam-channel = "0.5.1"
tokio = { version = "1.20.3", default-features = false, features = ["macros", "net", "rt", "sync", "time"] }
secp256k1 = { version = "0.20.3", features = ["rand"] }
block-modes = "0.8.0"
once_cell = "*"

[build-dependencies]
prost-build = "0.10.4"
vergen = { version = "5", default-features = false, features = ["build", "rustc", "git"] }
git2 = { version = "0.13.25", default-features = false, features = [] } # newer versions require rust 1.60 - https://github.com/rust-lang/git2-rs/issues/838
