[package]
name = "sideswap_client"
version = "0.1.2"
edition = "2021"
build = "build.rs"

[lib]
name = "sideswap_client"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
gdk-common = { path = "../gdk_rust/gdk_common" }
gdk-pin-client = { path = "../gdk_rust/gdk_pin_client" }
gdk-registry = { path = "../gdk_rust/gdk_registry" }
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_jade = { path = "../sideswap_jade" }
sideswap_payjoin = { path = "../sideswap_payjoin" }
sideswap_types = { path = "../sideswap_types" }

allo-isolate.workspace = true
anyhow.workspace = true
base64.workspace = true
bip39.workspace = true
bitcoin.workspace = true
block-modes.workspace = true
bytes.workspace = true
chrono.workspace = true
ciborium.workspace = true
crossbeam-channel.workspace = true
derive_more.workspace = true
elements.workspace = true
flexi_logger.workspace = true
hex.workspace = true
libc.workspace = true
log.workspace = true
once_cell.workspace = true
prost.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
ureq.workspace = true
url.workspace = true

[build-dependencies]
git2.workspace = true
prost-build.workspace = true
vergen.workspace = true
