[package]
name = "sideswap_common"
version = "0.1.2"
edition = "2021"

[dependencies]
gdk-pin-client = { path = "../gdk_rust/gdk_pin_client" }
sideswap_api = { path = "../sideswap_api" }
sideswap_types = { path = "../sideswap_types" }

aes-gcm-siv.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
base64.workspace = true
bitcoin.workspace = true
blake3.workspace = true
ciborium.workspace = true
derive_more.workspace = true
elements.workspace = true
flexi_logger.workspace = true
futures.workspace = true
hex-literal.workspace = true
hex.workspace = true
hkdf.workspace = true
log.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio-socks.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tungstenite.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]
hex.workspace = true
