[package]
name = "sideswap_dealer"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_types = { path = "../sideswap_types" }

anyhow.workspace = true
base64.workspace = true
crossbeam-channel.workspace = true
elements.workspace = true
hex.workspace = true
log.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
ureq.workspace = true
