[package]
name = "sideswap_dealer"
version = "0.1.2"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_types = { path = "../sideswap_types" }

anyhow.workspace = true
base64.workspace = true
elements.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
log4rs.workspace = true
poem-openapi.workspace = true
poem.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true

[build-dependencies]
vergen.workspace = true
