[package]
name = "sideswap_dealer_bitfinex"
version = "0.1.0"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_dealer = { path = "../sideswap_dealer" }

anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
config.workspace = true
crossbeam-channel.workspace = true
elements.workspace = true
futures-util.workspace = true
futures.workspace = true
hex.workspace = true
libc.workspace = true
log.workspace = true
log4rs.workspace = true
prost.workspace = true
rand.workspace = true
ring.workspace = true
serde_json.workspace = true
serde.workspace = true
signal-hook.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tungstenite.workspace = true
ureq.workspace = true
url.workspace = true

[build-dependencies]
prost-build.workspace = true
