[package]
name = "sideswap_dealer_bitfinex"
version = "0.1.0"
edition = "2021"

[dependencies]
sideswap_api = { path = "../sideswap_api" }
sideswap_common = { path = "../sideswap_common" }
sideswap_dealer = { path = "../sideswap_dealer" }
sideswap_types = { path = "../sideswap_types" }

anyhow.workspace = true
axum.workspace = true
base64.workspace = true
config.workspace = true
crc32fast.workspace = true
elements.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
log4rs.workspace = true
rand.workspace = true
reqwest.workspace = true
ring.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tungstenite.workspace = true
url.workspace = true
