[package]
name = "sideswap_dealer_example"
version = "0.1.2"
edition = "2018"

[dependencies]
sideswap_api = { version = "*", path = "../sideswap_api" }
sideswap_common = { version = "*", path = "../sideswap_common" }
sideswap_dealer = { version = "*", path = "../sideswap_dealer" }
clap = { version = "*" }
log = "*"
serde_json = "1.0"
reqwest = { version = "*", features = ["blocking", "json"] }
anyhow = "*"
serde = { version = "1.0", features = ["derive"] }
config = "*"
log4rs = "*"
